--- a/app/src/main/res/layout/activity_atool.xml
+++ b/app/src/main/res/layout/activity_atool.xml
@@ -1,10 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.android.mobilesafe.activity.AToolActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <TextView
+        style="@style/TitleStyle"
+        android:text="高级工具"/>
+
+    <TextView
+        android:id="@+id/tv_query_phone_address"
+        android:padding="5dp"
+        android:text="归属地查询"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:drawableLeft="@android:drawable/btn_star"
+        android:background="@drawable/selector_atool_item_bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/tv_sms_backup"
+        android:padding="5dp"
+        android:text="短信备份"
+        android:gravity="center"
+        android:textSize="18sp"
+        android:drawableLeft="@android:drawable/btn_star"
+        android:background="@drawable/selector_atool_item_bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <!--<TextView-->
+        <!--android:id="@+id/tv_query_phone_address"-->
+        <!--android:padding="5dp"-->
+        <!--android:text="常用号码查询"-->
+        <!--android:gravity="center"-->
+        <!--android:textSize="18sp"-->
+        <!--android:drawableLeft="@android:drawable/btn_star"-->
+        <!--android:background="@drawable/selector_atool_item_bg"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"/>-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/tv_query_phone_address"-->
+        <!--android:padding="5dp"-->
+        <!--android:text="程序锁"-->
+        <!--android:gravity="center"-->
+        <!--android:textSize="18sp"-->
+        <!--android:drawableLeft="@android:drawable/btn_star"-->
+        <!--android:background="@drawable/selector_atool_item_bg"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"/>-->
+
+</LinearLayout>
