--- a/app/src/main/res/layout/activity_query_address.xml
+++ b/app/src/main/res/layout/activity_query_address.xml
@@ -1,10 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.example.android.mobilesafe.activity.QueryAddressActivity">
 
-</android.support.constraint.ConstraintLayout>
+
+    <TextView
+        style="@style/TitleStyle"
+        android:text="归属地查询"/>
+
+    <EditText
+        android:id="@+id/et_phone"
+        android:hint="请输入电话号码"
+        android:inputType="phone"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
+    <Button
+        android:id="@+id/bt_query"
+        android:text="查询"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <TextView
+        android:id="@+id/tv_query_result"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
+</LinearLayout>
