--- a/app/src/main/res/layout/listview_blacknumber_item.xml
+++ b/app/src/main/res/layout/listview_blacknumber_item.xml
@@ -1,6 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:padding="5dp">
+
+    <TextView
+        android:id="@+id/tv_phone"
+        android:text="拦截号码"
+        android:textColor="#000"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+    <TextView
+        android:id="@+id/tv_mode"
+        android:text="拦截类型"
+        android:layout_below="@+id/tv_phone"
+        android:textColor="#000"
+        android:textSize="18sp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+    <ImageView
+        android:id="@+id/iv_delete"
+        android:background="@drawable/selector_blacknumber_delete_btn_bg"
+        android:layout_alignParentRight="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
 
 </RelativeLayout>
