--- a/app/src/main/res/layout/activity_atool.xml
+++ b/app/src/main/res/layout/activity_atool.xml
@@ -34,6 +34,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"/>
 
+    <ProgressBar
+        android:id="@+id/pd_bar"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
+
     <!--<TextView-->
         <!--android:id="@+id/tv_query_phone_address"-->
         <!--android:padding="5dp"-->
